clusters/cluster/espocrm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espocrm
  namespace: espocrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: espocrm
  template:
    metadata:
      labels:
        app: espocrm
    spec:
      containers:
        - name: espocrm
          image: espocrm/espocrm
          ports:
            - containerPort: 80
          volumeMounts:
            - name: espocrm-storage
              mountPath: /var/www/html
      restartPolicy: Always
      volumes:
        - name: espocrm-storage
          persistentVolumeClaim:
            claimName: espocrm-pvc
