clusters/cluster/espocrm/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: espocrm
  namespace: espocrm
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 31555
  selector:
    app: espocrm
  type: NodePort
