clusters/cluster/espocrm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: espocrm
  namespace: espocrm
  annotations:
    cert-manager.io/cluster-issuer: "clearclean-ca"
spec:
  tls:
  - hosts:
    - espocrm.cloud.clearclean.local
    secretName: espocrm-tls
  rules:
  - host: espocrm.cloud.clearclean.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: espocrm
            port:
              number: 80
